--- a/css/layout_nav01_r.css
+++ b/css/layout_nav01_r.css
@@ -44,3 +44,31 @@ body {
     font-size: 17px;
     font-weight: 400;
 }
+
+@media (max-width:1202px) {
+    .default {
+        padding: 80px 0;
+    }
+
+    .default .title {
+        max-width: 1170px;
+        margin: 0 auto;
+        margin-bottom: 32px;
+
+        /* r */
+        margin: 0 16px;
+    }
+
+    .default .title h2 {
+        font-size: 32px;
+        font-weight: 600;
+    }
+
+    .default .title .desc {
+        display: block;
+        margin-top: 16px;
+        line-height: 24px;
+        font-size: 17px;
+        font-weight: 400;
+    }
+}
