--- a/css/style_dr01_r.css
+++ b/css/style_dr01_r.css
@@ -1,5 +1,5 @@
 * {
-    outline: 1px solid tomato;
+    outline: 1px solid tomato--;
 }
 
 .header {
@@ -71,6 +71,213 @@
 .header .gnb>ul>li ul li~li a {
     border-top: 1px solid #ddd;
 }
+
+.header .mbtn {
+    display: none;
+}
+
+
+@media (max-width:1202px) {
+    .header {
+        border-bottom: 1px solid #ddd;
+    }
+
+    .header .header_wrap {
+        display: flex;
+        align-items: center;
+        max-width: 1170px;
+        margin: 0 auto;
+
+        height: 103px;
+
+        /* r */
+        margin: 0 16px;
+    }
+
+    .header h1 img {
+        vertical-align: middle;
+    }
+
+    .header .gnb {
+        margin-left: auto;
+    }
+
+    .header .gnb>ul {
+        display: flex;
+        gap: 40px;
+    }
+
+    .header .gnb>ul>li {
+        position: relative;
+    }
+
+    .header .gnb>ul>li ul {
+        position: absolute;
+        top: 103px;
+        left: 50%;
+        z-index: 3;
+
+        display: none;
+
+        width: 200px;
+
+        transform: translate(-50%, -16px);
+
+        background: #fff;
+        border: 1px solid #ddd;
+    }
+
+    .header .gnb>ul>li:hover ul {
+        display: block;
+    }
+
+    .header .gnb>ul>li>a {
+        display: block;
+        line-height: 103px;
+        font-size: 17px;
+        font-weight: 400;
+        white-space: nowrap;
+    }
+
+    .header .gnb>ul>li ul li a {
+        display: block;
+        line-height: 40px;
+        padding-left: 16px;
+        white-space: nowrap;
+
+    }
+
+    .header .gnb>ul>li ul li~li a {
+        border-top: 1px solid #ddd;
+    }
+
+    .header .mbtn {
+        display: none;
+    }
+}
+
+@media (max-width:768px) {
+    .header {
+        border-bottom: 1px solid #ddd;
+    }
+
+    .header .header_wrap {
+        display: flex;
+        align-items: center;
+        max-width: 1170px;
+        margin: 0 auto;
+
+        height: 103px;
+
+        /* r */
+        margin: 0 16px;
+    }
+
+    .header h1 img {
+        vertical-align: middle;
+    }
+
+    .header .gnb {
+        margin-left: auto;
+
+        /* r */
+        position: fixed;
+        top: 0;
+        left: -100%;
+        z-index: 999;
+
+        margin-left: 0;
+        width: calc(100% - 80px);
+        height: 100vh;
+
+        background: #fff;
+
+        transition: 0.4s;
+    }
+
+    .header .gnb.on {
+        left: 0;
+    }
+
+    .header .gnb>ul {
+        display: flex;
+        gap: 40px;
+
+        /* r */
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .header .gnb>ul>li {
+        position: relative;
+    }
+
+    .header .gnb>ul>li ul {
+        position: absolute;
+        top: 103px;
+        left: 50%;
+        z-index: 3;
+
+        display: none;
+
+        width: 200px;
+
+        transform: translate(-50%, -16px);
+
+        background: #fff;
+        border: 1px solid #ddd;
+
+        /* r */
+        position: static;
+
+        transform: translate(0, 0);
+    }
+
+    .header .gnb>ul>li:hover ul {
+        display: block;
+
+        /* r */
+        display: none;
+    }
+
+    .header .gnb>ul>li>a {
+        display: block;
+        line-height: 103px;
+        font-size: 17px;
+        font-weight: 400;
+        white-space: nowrap;
+
+        /* r */
+        line-height: 40px;
+    }
+
+    .header .gnb>ul>li ul li a {
+        display: block;
+        line-height: 40px;
+        padding-left: 16px;
+        white-space: nowrap;
+
+    }
+
+    .header .gnb>ul>li ul li~li a {
+        border-top: 1px solid #ddd;
+    }
+
+    .header .mbtn {
+        display: block;
+
+        position: fixed;
+        right: 16px;
+        top: auto;
+        z-index: 999;
+
+        background: #fff;
+        border: 1px solid #ddd;
+        padding: 4px;
+    }
+}
+
+
 
 .main_visual {
     position: relative;
