--- a/css/style_dr01_r.css
+++ b/css/style_dr01_r.css
@@ -187,8 +187,10 @@
         z-index: 999;
 
         margin-left: 0;
+        padding: 120px 24px 0 24px;
         width: calc(100% - 80px);
         height: 100vh;
+        border-right: 1px solid #ddd;
 
         background: #fff;
 
@@ -220,12 +222,13 @@
 
         display: none;
 
-        width: 200px;
+        width: auto;
 
         transform: translate(-50%, -16px);
 
-        background: #fff;
-        border: 1px solid #ddd;
+        background: #f9f9f9;
+        border: none;
+        border-top: 1px solid #333;
 
         /* r */
         position: static;
@@ -249,6 +252,7 @@
 
         /* r */
         line-height: 40px;
+        border-bottom: 1px solid #ddd;
     }
 
     .header .gnb>ul>li ul li a {
